--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div style="background-color: rgb(36, 36, 36); border-radius: 20px; font-optical-sizing: auto;
-font-weight: 500; font-style: normal; font-variation-settings: 'width' 100;">
+font-weight: 500; font-style: normal; font-variation-settings: 'width' 80%;">
     <!-- main -->
 
     <h1
