--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Node Utilities</title>
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+
 </head>
 <body>
   <div style="background-color: rgb(36, 36, 36); border-radius: 20px; font-optical-sizing: auto;
-font-weight: 500; font-style: normal; font-variation-settings: 'width' 80%;">
+font-weight: 500; font-style: normal; font-variation-settings: 'width' 1000px;">
     <!-- main -->
 
     <h1
