--- a/index.html
+++ b/index.html
@@ -1,14 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Node Utilities</title>
-
-</head>
-<body>
-  <div style="background-color: rgb(36, 36, 36); border-radius: 20px; font-optical-sizing: auto;
-font-weight: 500; font-style: normal; font-variation-settings: 'width' 1000px;">
+<div style="background-color: rgb(36, 36, 36); border-radius: 20px; font-optical-sizing: auto;
+font-weight: 500; font-style: normal; font-variation-settings: 'width' 100; width: 80%; align-items: center;"  >
     <!-- main -->
 
     <h1
@@ -399,5 +390,3 @@ font-weight: 500; font-style: normal; font-variation-settings: 'width' 1000px;">
     <br>
     <br>
 </div>
-</body>
-</html>
