--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <div style="margin: 16px auto; text-align: center; color: #f3f3f3; max-width: 80%;">
             <p>ショートカットキーを変更できます。</p>
             <div style="margin: 16px auto; text-align: center; max-width: 80%;">
-                <img src="https://assets.superhivemarket.com/cache/6b5ee01cee0f4651fee2dd9fad58d50c.png"
+                <img src="https://github.com/sum-bocfob/node-utilities/blob/main/Pref1_JP.png?raw=true"
                     style="border-color: #818181; border-width: 1px; border-style: solid;">
             </div>
             <p style="margin-bottom: -12px;">以下を変更できます</p>
