--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </span>
             </h1>
             <div style="margin: 16px auto; text-align: center; max-width: 90%;">
-                <img src="https://assets.superhivemarket.com/cache/42bafacdd2c764bc955756d5732481df.png"
+                <img src="https://github.com/sum-bocfob/node-utilities/blob/main/Images/UtilitiesPie_JP.png?raw=true"
                     style="border-color: #818181; border-width: 1px; border-style: solid;">
             </div>
             <p style="margin: 16px auto; text-align: center; max-width: 80%;">使用可能な機能は、ノードとフレームの選択状態によって変わります。</p>
@@ -162,7 +162,7 @@
                              background: linear-gradient(to right,#168aad 0%, #1a759f 100%); text-align: center;">選択パイメニュー</span>
             </h1>
             <div style="margin: 16px auto; text-align: center; max-width: 80%;">
-                <img src="https://assets.superhivemarket.com/cache/770e6750941070b2b509a52f13c1cb02.png"
+                <img src="https://github.com/sum-bocfob/node-utilities/blob/main/Images/SelectPie_JP.png?raw=true"
                     style="border-color: #818181; border-width: 1px; border-style: solid;">
                 <p>キーが押された時点でのマウスの位置を基準に、それぞれの方向にあるノードを選択します。<br>
                     "フレームも選択"をオンにすると、フレームも選択されるようになります。</p>
@@ -212,7 +212,7 @@
                 <li style="text-align: left;">ズームレベル: 値が大きいほどズームします。</li>
             </ul>
             <div style="margin: 16px auto; text-align: center; max-width: 80%;">
-                <img src="https://assets.superhivemarket.com/cache/0886a66a641b4c9c8bc5a63fdf715c74.png"
+                <img src="https://github.com/sum-bocfob/node-utilities/blob/main/Pref2_JP.png?raw=true"
                     style="border-color: #818181; border-width: 1px; border-style: solid;">
             </div>
         </div>
