--- a/index.html
+++ b/index.html
@@ -67,10 +67,11 @@
                     style="border-color: #818181; border-width: 1px; border-style: solid;">
             </div>
 
-            <div style="margin: 16px auto; text-align: center; max-width: 80%;">
+            <div style="margin: 16px auto; display: flex; justify-content: center; max-width: 80%;">
                 <img src="https://github.com/sum-bocfob/node-utilities/blob/main/Images/UtilitiesPie_JP.png?raw=true"
-                    style="border-color: #818181; border-width: 1px; border-style: solid; display: block; margin: auto;">
+                    style="border-color: #818181; border-width: 1px; border-style: solid;">
             </div>
+            
             
 
 
