--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Node Utilities</title>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
 
-<body>
+<body style="font-family: 'Noto Sans JP', serif;">
     <div style="background-color: rgb(36, 36, 36); border-radius: 20px; font-optical-sizing: auto;
     font-weight: 500; font-style: normal; font-variation-settings: 'width' 100; width: 80%; margin: 0 auto;">
         <!-- main -->
