--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <title>Node Utilities</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+JP:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 
@@ -17,22 +24,23 @@
         <!-- main -->
 
         <h1
-            style="margin: 0px auto; font-size: 80px; padding: 30px; font-weight: bold; text-align: center; background: linear-gradient(to right, #FFA348, #EC6628); color: #363636;">
+            style="font-family: 'Montserrat', serif; margin: 0px auto; font-size: 80px; padding: 30px; font-weight: bold; text-align: center; background: linear-gradient(to right, #FFA348, #EC6628); color: #363636;">
             Node Utilities</h1>
 
-            <div style="display: flex; justify-content: center; align-items: center; background: #f3f3f3; padding: 10px 0;">
-                <a href="https://blendermarket.com/products/node-utilities" target="_blank" rel="noopener noreferrer" style="margin-right: 100px;">
-                    <img src="https://github.com/sum-bocfob/publicImages/blob/main/Blender%20Market%20logo.png?raw=true"
-                        alt="Node Utilities Blender Market" style="width: 200px; height: auto; display: block;">
-                </a>
-                <a href="https://sumsum.booth.pm/items/6560406" target="_blank" rel="noopener noreferrer"
-                    style="margin-right: 20px;">
-                    <img src="https://github.com/sum-bocfob/publicImages/blob/main/BOOTH_Logo.png?raw=true"
-                        alt="Node Utilities BOOTH" style="width: 200px; height: auto; display: block;">
-                </a>
-            </div>
-            
-            
+        <div style="display: flex; justify-content: center; align-items: center; background: #f3f3f3; padding: 10px 0;">
+            <a href="https://blendermarket.com/products/node-utilities" target="_blank" rel="noopener noreferrer"
+                style="margin-right: 100px;">
+                <img src="https://github.com/sum-bocfob/publicImages/blob/main/Blender%20Market%20logo.png?raw=true"
+                    alt="Node Utilities Blender Market" style="width: 200px; height: auto; display: block;">
+            </a>
+            <a href="https://sumsum.booth.pm/items/6560406" target="_blank" rel="noopener noreferrer"
+                style="margin-right: 20px;">
+                <img src="https://github.com/sum-bocfob/publicImages/blob/main/BOOTH_Logo.png?raw=true"
+                    alt="Node Utilities BOOTH" style="width: 200px; height: auto; display: block;">
+            </a>
+        </div>
+
+
 
 
         <div style="margin-top: 40px; text-align: center; max-width: 80% ; margin-left: auto; margin-right: auto;">
@@ -47,7 +55,7 @@
 
         <!-- how to use -->
         <h2
-            style="font-size: xxx-large; padding: 30px 0; font-weight: bold; text-align: center; background: linear-gradient(to right, #FFA348, #EC6628); color: #363636;">
+            style="font-size: xxx-large; padding: 30px 0; font-weight:900; text-align: center; background: linear-gradient(to right, #FFA348, #EC6628); color: #363636;">
             使用方法</h2>
 
 
